--- a/_episodes_rmd/03-inference-pse.Rmd
+++ b/_episodes_rmd/03-inference-pse.Rmd
@@ -7,7 +7,7 @@ questions:
 - "?"
 - "?"
 objectives:
-- ""
+- "Describe the Central Limit Theorem, the mathematical theory that permits us to compute p-values in practice."
 - ""
 - ""
 - ""
@@ -25,7 +25,15 @@ source: Rmd
 ```{r, include=FALSE}
 source("../bin/chunk-options.R")
 knitr_fig_path("03-")
+library(downloader)
+url <- "https://raw.githubusercontent.com/genomicsclass/dagdata/master/inst/extdata/mice_pheno.csv"
+filename <- basename(url)
+download(url, destfile=filename)
+pheno <- na.omit(read.csv(filename))
+library(tidyverse)
+library(rafalib)
 ```
+
 ## Populations, Samples and Estimates 
 We can never know the true mean or variance of an entire population. Why not? Because we can't feasibly measure every member of a population. We can never know the true mean blood pressure of all mice, for example, even if all are from one strain, because we can't afford to buy them all or even find them all. We can never know the true mean blood pressure of all people on a Western diet, for example, because we can't possible measure the entire population that's on a Western diet. If we could measure all people on a Western diet, we really are interested in the difference in means between people on a Western vs. non high fat high sugar diet because we want to know what effect the diet has on people. If there is no difference in means, we can say that there is no effect of diet. If there is a difference in means, we can say that the diet has an effect. 
 The question we are asking is can be expressed as:
@@ -54,7 +62,7 @@ because we happen to have the weights of all the mice of this
 type. We download [this](https://raw.githubusercontent.com/genomicsclass/dagdata/master/inst/extdata/mice_pheno.csv) file to our working directory and read in to R:
 
 ```{r load_pheno}
-pheno <- read_csv(file = "../data/mice_pheno.csv")
+pheno <- read.csv(file = "../data/mice_pheno.csv")
 ```
 
 We can then access the population values and determine, for example, how many we have. Here we compute the size of the control population:
@@ -84,14 +92,14 @@ The mean:
 
 ```{r mu_control_vs_hf}
 # X is the control population
-sum(controlPopulation$Bodyweight) # sum of the xsubi's
-length(controlPopulation$Bodyweight) # this equals m
-sum(controlPopulation$Bodyweight)/length(controlPopulation$Bodyweight) # this equals mu sub x
+sum(controlPopulation) # sum of the xsubi's
+length(controlPopulation) # this equals m
+sum(controlPopulation)/length(controlPopulation) # this equals mu sub x
 
 
 # Y is the high fat diet population
-sum(hfPopulation$Bodyweight) # sum of the ysubi's
-sum(hfPopulation$Bodyweight)/length(hfPopulation$Bodyweight) # this equals mu sub y
+sum(hfPopulation) # sum of the ysubi's
+sum(hfPopulation)/length(hfPopulation) # this equals mu sub y
 ```
 
 The variance:
@@ -134,24 +142,25 @@ We will use the mouse phenotype data. Remove the lines that contain missing valu
 pheno <- na.omit(pheno)
 ```
 
-> Exercise 1
-> 1.Use `dplyr` to create a vector `x` with the body weight of all males on the control (chow) diet. 
-> What is this population’s average?
-> 2. Now use the `rafalib` package and use the `popsd` function to compute the population standard deviation.
-> 3. Set the seed at 1. Take a random sample `X` of size 25 from `x`. What is the sample average?
-> 4. Use `dplyr` to create a vector `y` with the body weight of all males on the high fat (hf) diet.
-> What is this population’s average?
-> 5. Now use the `rafalib` package and use the `popsd` function to compute the population standard deviation.
-> 6. Set the seed at 1. Take a random sample `Y` of size 25 from `y`. What is the sample average?
-> 7. What is the difference in absolute value between <i>y&#772;-x&#772;</i> and <i>X&#772;-Y&#772;</i>?
+> ## Exercise 1  
+> 1.Use `dplyr` to create a vector `x` with the body weight of all males on the control (chow) diet.   
+> What is this population’s average?  
+> 2. Now use the `rafalib` package and use the `popsd` function to compute the population standard deviation.  
+> 3. Set the seed at 1. Take a random sample `X` of size 25 from `x`. What is the sample average?  
+> 4. Use `dplyr` to create a vector `y` with the body weight of all males on the high fat (hf) diet.  
+> What is this population’s average?  
+> 5. Now use the `rafalib` package and use the `popsd` function to compute the population standard deviation.  
+> 6. Set the seed at 1. Take a random sample `Y` of size 25 from `y`. What is the sample average?  
+> 7. What is the difference in absolute value between <i>y&#772;-x&#772;</i> and <i>X&#772;-Y&#772;</i>?  
 > 8. Repeat the above for females. Make sure to set the seed to 1 before each sample call. What is the difference 
-> in absolute value between <i>y&#772;-x&#772;</i> and <i>X&#772;-Y&#772;</i>?
+> in absolute value between <i>y&#772;-x&#772;</i> and <i>X&#772;-Y&#772;</i>?  
 > 9.For the females, our sample estimates were closer to the population difference than with males. 
-> What is a possible explanation for this?
+> What is a possible explanation for this?  
 > A) The population variance of the females is smaller than that of the males; thus, the sample variable has less variability.
 > B) Statistical estimates are more precise for females.
 > C) The sample size was larger for females.
 > D) The sample size was smaller for females.
+>
 > > ## Solution to Exercise 1
 > >
 > {: .solution}
@@ -214,6 +223,92 @@ pseudonym "Student". The distribution is therefore called Student's
 t-distribution. Later we will learn more about how this result is
 used.
 
+> ## Exercise 1  
+> 1. If a list of numbers has a distribution that is well approximated
+> by the normal distribution,what proportion of these numbers are
+> within one standard deviation away from the list’s average?  
+> 2. What proportion of these numbers are within two standard
+> deviations away from the list’s average?  
+> 3.What proportion of these numbers are within three standard
+> deviations away from the list’s average?  
+> 4.Define y to be the weights of males on the control diet. 
+> What proportion of the mice are within one standard deviation away
+> from the average weight (remember to use `popsd` for the
+> population sd)?  
+> 5.What proportion of these numbers are within two standard deviations
+> away from the list’s average?  
+> 6.What proportion of these numbers are within three standard
+> deviations away from the list’s average?  
+> 7.Note that the numbers for the normal distribution and our weights
+> are relatively close. Also, notice that we are indirectly comparing
+> quantiles of the normal distribution to quantiles of the mouse weight
+> distribution. We can actually compare all quantiles using a
+> qqplot. Which of the following best describes the qq-plot comparing
+> mouse weights to the normal distribution?  
+> A) The points on the qq-plot fall exactly on the identity line.  
+> B) The average of the mouse weights is not 0 and thus it can’t follow a normal distribution.
+> C) The mouse weights are well approximated by the normal
+> distribution, although the larger values (right tail) are larger than
+> predicted by the normal. This is consistent with the differences seen
+> between question 3 and 6.  
+> D) These are not random variables and thus they can’t follow a normal distribution.  
+> 8.Create the above qq-plot for the four populations: male/females on
+> each of the two diets. What is the most likely explanation for the
+> mouse weights being well approximated?   
+> What is the best explanation for all these being well approximated by
+> the normal distribution?  
+> A) The CLT tells us that sample averages are approximately normal.  
+> B) This just happens to be how nature behaves, perhaps the result of
+> many biological factors averaging out.  
+> C) Everything measured in nature follows a normal distribution.  
+> D) Measurement error is normally distributed.
+>
+> > ## Solution to Exercise 1
+> {: .solution}
+{: .challenge}
+
+> ## Exercise 2
+> Here we are going to use the function` replicate` to learn about
+> the distribution of random variables. All the above exercises relate
+> to the normal distribution as an approximation of the distribution of
+> a fixed list of numbers or a population. We have not yet discussed
+> probabilityin these exercises. If the distribution of a list of  numbers
+> is approximately normal, then if we pick a number at random from this
+> distribution, it will follow a normal distribution. However, it is
+> important to remember that stating that some quantity has a
+> distribution does not necessarily imply this quantity is random.
+> Also, keep in mind that this is not related to the central limit
+> theorem. The central limit applies to averages of random variables.
+> Let’s explore this concept. We will now take a sample of size 25 from
+> the population of males on the chow diet. The average of this sample
+> is our random variable. We will use the replicate to observe
+> 10,000 realizations of this random variable.  
+> Set the seed at 1, generate these 10,000 averages.   
+> Make a histogram and qq-plot these 10,000 numbers against the normal distribution.  
+> We can see that, as predicted by the CLT, the distribution of the
+> random variable is very well approximated by the normal distribution. > `y <- filter(pheno, Sex=="M"&Diet=="chow") %>%`   
+> `select(Bodyweight) %>%`   
+> `unlist`  
+> `avgs <- replicate(10000, mean(sample(y,25)))`  
+> `mypar(1,2)`  
+> `hist(avgs)`  
+> `qqnorm(avgs)`  
+> `qqline(avgs)`  
+> What is the average of the distribution of the sample average?  
+> What is the standard deviation of the distribution of sample averages?  
+> According to the CLT, the answer to the exercise above should be the
+> same as `mean(y)`. You should be able to confirm that these two
+> numbers are very close. Which of the following does the CLT tell us
+> should be close to your answer to this exercise?  
+> A) `popsd(y)`  
+> B) `popsd(avgs)/sqrt(25)`  
+> C) `sqrt(25) / popsd(y)`  
+> D) `popsd(y)/sqrt(25)`
+>
+> > ## Solution to Exercise 2
+> {: .solution}
+{: .challenge}
+
 ## t-tests in Practice
 
 #### Introduction
@@ -226,10 +321,10 @@ We will now demonstrate how to obtain a p-value in practice. We begin by loading
 We start by reading in the data. A first important step is to identify which rows are associated with treatment and control, and to compute the difference in mean. 
 
 ```{r chow_hf, message=FALSE}
-control <- filter(dat, Diet=="chow") %>%
+control <- filter(pheno, Diet=="chow") %>%
   select(Bodyweight) %>% 
   unlist
-treatment <- filter(dat, Diet=="hf") %>%
+treatment <- filter(pheno, Diet=="hf") %>%
   select(Bodyweight) %>% 
   unlist
 diff <- mean(treatment) - mean(control)
@@ -587,14 +682,14 @@ In summary, if a 95% or 99% confidence interval does not include
 Note that the confidence interval for the difference $d$ is provided by the `t.test` function:
 
 ```{r control_v_treatment,echo=FALSE}
-controlIndex <- which(dat$Diet=="chow")
-treatmentIndex <- which(dat$Diet=="hf")
-control <- dat[controlIndex,2]
-treatment <- dat[treatmentIndex,2]
+controlIndex <- which(pheno$Diet=="chow")
+treatmentIndex <- which(pheno$Diet=="hf")
+control <- pheno[controlIndex, 3]
+treatment <- pheno[treatmentIndex, 3]
 ```
 
 ```{r}
-t.test(treatment,control)$conf.int
+t.test(treatment, control)$conf.int
 ```
 
 In this case, the 95% confidence interval does include 0 and we observe that the p-value is larger than 0.05 as predicted. If we change this to a 90% confidence interval, then:
