--- a/_episodes_rmd/04-inference-clt.Rmd
+++ b/_episodes_rmd/04-inference-clt.Rmd
@@ -106,8 +106,8 @@ used.
 > distribution. We can actually compare all quantiles using a
 > qqplot. Which of the following best describes the qq-plot comparing
 > mouse weights to the normal distribution?  
-> A) The points on the qq-plot fall exactly on the identity line.  
-> B) The average of the mouse weights is not 0 and thus it can’t follow a normal distribution.  
+> A) The points on the qq-plot fall exactly on the identity line.    
+> B) The average of the mouse weights is not 0 and thus it can’t follow a normal distribution.   
 > C) The mouse weights are well approximated by the normal
 > distribution, although the larger values (right tail) are larger than
 > predicted by the normal. This is consistent with the differences seen
@@ -173,31 +173,11 @@ used.
 > {: .solution}
 {: .challenge}
 
-
-#### The t-distribution
-
-The CLT relies on large samples, what we refer to as _asymptotic results_. When the CLT does not apply, there is another option that does not rely on asymptotic results. When the original population from which a random variable, say $Y$, is sampled is normally distributed with mean 0, then we can calculate the distribution of: 
-
-$$
-\sqrt{N} \frac{\bar{Y}}{s_Y}
-$$
-
-This is the ratio of two random variables so it is not
-necessarily normal. The fact that the denominator can be small by
-chance increases the probability of observing large
-values. [William Sealy Gosset](http://en.wikipedia.org/wiki/William_Sealy_Gosset),
-an employee of the Guinness brewing company, deciphered the
-distribution of this random variable and published a paper under the
-pseudonym "Student". The distribution is therefore called Student's
-t-distribution. Later we will learn more about how this result is
-used. 
-
 Here we will use the mice phenotype data as an example. We start by
 creating two vectors, one for the control population and one for the
 high-fat diet population:
 
-```{r,message=FALSE}
-library(dplyr)
+```{r, eval=FALSE}
 dat <- read.csv("mice_pheno.csv") #We downloaded this file in a previous section
 controlPopulation <- filter(dat,Sex == "F" & Diet == "chow") %>%  
   select(Bodyweight) %>% unlist
@@ -235,25 +215,6 @@ for this particular dataset the t-distribution works well even for
 sample sizes as small as 3. 
 
 Exercises
-
-
-1.If a list of numbers has a distribution that is well approximated by the normal distribution,what proportion of these numbers are within one standard deviation away from the list’saverage?
-2.What proportion of these numbers are within two standard deviations away from the list’saverage?
-3.What proportion of these numbers are within three standard deviations away from the list’saverage?
-4.Defineyto be the weights of males on the control diet. What proportion of the mice arewithin one standard deviation away from the average weight (remember to usepopsdforthe populationsd)?
-5.What proportion of these numbers are within two standard deviations away from the list’saverage?
-6.What proportion of these numbers are within three standard deviations away from the list’saverage?
-7.Note that the numbers for the normal distribution and our weights are relatively close. Also,notice that we are indirectly comparing quantiles of the normal distribution to quantilesof the mouse weight distribution. We can actually compare all quantiles using a qqplot.Which of the following best describes the qq-plot comparing mouse weights to the normaldistribution?
-A) The points on the qq-plot fall exactly on the identity line.
-B) The average of the mouse weights is not 0 and thus it can’t follow a normaldistribution.
-C) The mouse weights are well approximated by the normal distribution, althoughthe larger values (right tail) are larger than predicted by the normal. This is consistentwith the differences seen between question 3 and 6.
-D) These are not random variables and thus they can’t follow a normal distribution.
-
-8.Create the above qq-plot for the four populations: male/females on each of the two diets.What is the most likely explanation for the mouse weights being well approximated? Whatis the best explanation for all these being well approximated by the normal distribution?
-A) The CLT tells us that sample averages are approximately normal.
-B) This just happens to be how nature behaves. Perhaps the result of many biologicalfactors averaging out.
-C) Everything measured in nature follows a normal distribution.
-D) Measurement error is normally distributed.9.Here we are going to use the functionreplicateto learn about the distribution of random variables.
 
 All the above exercises relate to the normal distribution as an approximation of the distribution of a fixed list of numbers or a population. We have not yet discussed probability in these exercises. If the distribution of a list of numbers is approximately normal, then if we pick a number at random from this distribution, it will follow a normal distribution. However, it is important to remember that stating that some quantity has a distribution does not necessarily imply this quantity is random. Also, keep in mind that this is not related to the central limit theorem. The central limit applies to averages of random variables. Let’s explore this concept.
 
